--- a/QLearningApplications.Rmd
+++ b/QLearningApplications.Rmd
@@ -14,9 +14,13 @@ In this paper we concentrate on one of the main technique used to create AIs, re
 
 In order to elaborate more on the topic we focus on RL and its implementation to the classical tic-tac-toe game. The latter has been around for three and half millennia and nowadays it is typically popular among kids. On 3 by 3 board players alternate terns to put either X or O. A player wins if there is either row, column or diagonal filled with her symbol. 
 
+In this paper, we will present the theory behind reinforcement learning and its variations. We then present its pratical application to build a tic-tac-toe robot player. After this, we explore, in the context of this implementation, different parametrizations and the resulting strategies. We finally provide a review of other similar applications of reinforcement learning.
+
 #Reinforcement Learning 
 
-Machine learning's aim may be to create intelligent entities called agents. Reinforcement Learning (RL) is the sub-field specialized in this area. To make a parallel with supervised learning (SL), we can say the agent in SL is taught how to react in a given situation from experience. In RL, there is a room for randomness in the choice of the next step. When the action is completed, the agent is told if it has been a good or bad decision by providing negaive or positive reward. It learns how he should act in the future based on that constant learning. Put in other words, the agent is learning from interacting with its environment and observing what is the outcome of this interaction. However, the agent is not told if his action is good or bad immediately after it has been made. The reward comes after several additional steps. This leads to the so-called “temporal credit assignment problem”: how to decide which step contributes the most to the success of a game, as the agent does series of decisions before getting the reward. We deal this problem using RL and especially temporal difference learning. We will elaborate more on the topic later on.
+Machine learning's aim may be to create intelligent entities called agents. Reinforcement Learning (RL) is the sub-field specialized in this area. To make a parallel with supervised learning (SL), we can say the agent in SL is taught how to react in a given situation from experience. In RL, there is a room for randomness in the choice of the next step. When the action is completed, the agent is told if it has been a good or bad decision by providing negaive or positive reward. It learns how he should act in the future based on that constant learning. 
+
+Put in other words, the agent is learning from interacting with its environment and observing what is the outcome of this interaction. However, the agent is not told if his action is good or bad immediately after it has been made. The reward comes after several additional steps. This leads to the so-called “temporal credit assignment problem”: how to decide which step contributes the most to the success of a game, as the agent does series of decisions before getting the reward. We deal this problem using RL and especially temporal difference learning. We will elaborate more on the topic later on.
 
 ##Reasoning 
 The reasoning for RL is simple. Imagine playing the game. Adults use analyze the current situation and use their experience to deduce which is the next best step. Young children use experience to a much lesser extent. They mostly use the trail-error approach. This is exactly what RL does. When children play they record the success of a specific action. They will repeat the better actions more often. However, they might fail to consider their their oponent's move. By playing a lot the kid or the agent learns to consider this and gets a better "cause and effect" idea of the game. The resulting RL algorithm is as follows:  
@@ -51,7 +55,7 @@ $r_{t+1}$ is the observed reward at time t+1
 
 Since the game we have chosen is tic-tac-toe, where one receives a reward at the end of the game, we concentrate on the the latter.  
 
-###On vs Off-Policy
+###On- vs Off-Policy
 The On-Policy is used to learn the **value of a particular policy**. The update is done by values of the same policy. The policies are usually “soft”, meaning that they ensure exploration of the game's possibilities. This is done by making the algorithm chooses random action (not a greedy-reward-optimizing one) with probability epsilon. 
 The Off-Policy learns different policies in order to **evaluate behavior and value estimation.** Again the policies should be “soft” in order to promote exploration. Note that in the On-Policy method the update of the estimated value is done strictly based on **experience**, whereas in the Off-Policy approach, hypothetical actions are also used. This means that an agent trained by an off-policy method may end up learning strategies that it has not necessarily seen during the learning phase.
 
@@ -68,7 +72,7 @@ The algorithm works in the following manner:
 4. Update the Q-value for the state using the observed reward and the maximum reward possible for the next state. 
 
 Updates are done in the following way:  
-$$Q(s,a) =  Q(s,a) + \alpha(r + \gamma max_{\alpha}[Q(s',a')-Q(s,a)]$$   
+$$Q(s,a) =  Q(s,a) + \alpha(r + \gamma max_{\alpha}[Q(s',a')-Q(s,a)])$$   
 where $\alpha$ is the learning rate, $\gamma$ is the discount factor and $max_{\alpha}$ is the maximum reward in the following state.   
 5. Set the state to the new state, and repeat the process until a terminal state is reached.  
 For the tic-tac-toe game, we do not have a reward for every action. Therefore, the value functions coincide. 
