--- a/QLearningApplications.Rmd
+++ b/QLearningApplications.Rmd
@@ -116,8 +116,8 @@ While playing the game, the human user is allowed to train the AI with N games w
 
 #Parameters and learning behaviour
 
-In the following we describe the learning behaviour of the two player classes according to changes in parameters. 
-In order to study the behaviour of the algorithm we let two robot players play against each other. We observe the wining and draw rates for an increasing number of training games and for both players we record over time how the value of a few of the possible starting states evolve over time. We chose to examine the value of the starting positions for two reasons. First, these positions are reached frequently when playing the game again and again, since in the beginning of the game there are only a limited number of scenarios possible. Consequently, the values of these states are updated frequently and more likely to depict the learning behavior and success of the two players. Second, the evolution of these values well illustrates that while the agents make greedy moves - taking into account only the immediate consequence of actions - the algorithm still achieves strategies which are overall “optimal”. 
+In the following we describe the learning behaviour of the two player classes according to changes in parameters (learning rate and randomization). 
+In order to study the behaviour of the algorithm we let two robot players play against each other. We observe the wining and draw rates for an increasing number of training games. For both players we record over time how the value of a few of the possible starting states evolve over time. We chose to examine the value of the starting positions for two reasons. First, these positions are reached frequently when playing the game again and again, since in the beginning of the game there are only a limited number of scenarios possible. Consequently, the values of these states are updated frequently and more likely to depict the learning behavior and success of the two players. Second, the evolution of these values well illustrates that while the agents make greedy moves - taking into account only the immediate consequence of actions - the algorithm still achieves strategies which are overall “optimal”. 
 
 First we examine the specification when both player have the same learning parameter. We exclude random choices and let both players decide optimally in a greedy way.
 
