--- a/tictactoe_nb.ipynb
+++ b/tictactoe_nb.ipynb
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -404,20 +404,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "54\n",
+      "81\n",
       " _ _ _ \n",
-      " O _ _ \n",
+      " _ X _ \n",
       " _ _ _ \n",
       "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.8"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#check hash value of given states\n",
     "state = State()\n",
-    "state[1,0] = 2\n",
+    "state[1,1] = 1\n",
+    "#state[1,2] = 2\n",
     "print(hash(state))\n",
-    "print(str(state))"
+    "print(str(state))\n",
+    "\n",
+    "8/10."
    ]
   },
   {
@@ -440,7 +453,7 @@
     }
    ],
    "source": [
-    "g2.selfplay()"
+    "g2.selfplay() 7 19 163 13123 5 165 13125 13203 567"
    ]
   },
   {
